cmake_minimum_required(VERSION 2.8.11)

project(kinect-grab_c)

set(KINECT_GRAB_C_BIN_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/bin)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${KINECT_GRAB_C_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${KINECT_GRAB_C_BIN_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${KINECT_GRAB_C_BIN_DIR})

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
	string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${KINECT_GRAB_C_BIN_DIR})
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${KINECT_GRAB_C_BIN_DIR})
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${KINECT_GRAB_C_BIN_DIR})
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPE)

set(CMAKE_MACOSX_RPATH FALSE)

#Find libfreenect
find_library(FREENECT_LIBRARY freenect_sync)
find_path(FREENECT_INCLUDE_DIR libfreenect)
include_directories(${FREENECT_INCLUDE_DIR})

add_subdirectory(src)