cmake_minimum_required(VERSION 3.1)

project(kinect-grab_c)

set(KINECT_GRAB_C_BIN_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/bin)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${KINECT_GRAB_C_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${KINECT_GRAB_C_BIN_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${KINECT_GRAB_C_BIN_DIR})

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
	string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${KINECT_GRAB_C_BIN_DIR})
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${KINECT_GRAB_C_BIN_DIR})
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${KINECT_GRAB_C_BIN_DIR})
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPE)

set(CMAKE_MACOSX_RPATH FALSE)

find_library(FREENECT_LIBRARIES freenect_sync)
find_path(FREENECT_INCLUDE_DIR libfreenect libfreenect.h)

if(WIN32)
	find_library(FREENECT_LIBRARY freenect)
	find_library(PTHREADS_LIBRARY pthreadVC2)
	find_library(USB_LIBRARY libusb-1.0)
	set(FREENECT_LIBRARIES ${FREENECT_LIBRARIES} ${FREENECT_LIBRARY} ${PTHREADS_LIBRARY} ${USB_LIBRARY})
endif()

include_directories(${FREENECT_INCLUDE_DIR} ${FREENECT_INCLUDE_DIR}/libfreenect)

add_subdirectory(src)